porfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: porfolio-deployment
  labels:
    app: porfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: porfolio
  template:
    metadata:
      labels:
        app: porfolio
    spec:
      containers:
      - name: porfolio
        image: ghcr.io/whattheearl/porfolio:0.0.1
        ports:
        - containerPort: 80
