porfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: porfolio-service
spec:
  selector:
    app: porfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
