porfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: porfolio-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: porfolio.whattheearl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: porfolio-service
            port:
              number: 8080
